--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="250dp"
     android:layout_margin="10dp"
     android:backgroundTint="@color/gold"
     app:cardCornerRadius="20dp"
@@ -18,8 +18,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
-            app:layout_constraintEnd_toStartOf="@id/titleTextView"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ContentDescription" />
@@ -30,14 +29,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
-            android:text="아이언맨"
             app:layout_constraintBottom_toTopOf="@id/yearTextView"
-            app:layout_constraintStart_toEndOf="@id/posterImageView"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/posterImageView" />
 
 
         <TextView
@@ -46,11 +43,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
-            android:text="2020"
             app:layout_constraintBottom_toTopOf="@id/scoreTextView"
-            app:layout_constraintStart_toEndOf="@id/posterImageView"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
 
@@ -59,13 +55,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginBottom="20dp"
-            android:text="9.0"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="13sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/posterImageView"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/yearTextView" />
 
 
