--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -5,19 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="250dp"
     android:layout_margin="10dp"
-    android:backgroundTint="@color/gold"
     app:cardCornerRadius="20dp"
     app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+
+        >
 
         <ImageView
             android:id="@+id/posterImageView"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
